--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -249,7 +249,9 @@ textarea {
   font-size: inherit;
   line-height: inherit;
 }
-
+textarea {
+  resize: none;
+}
 button,
 input {
   overflow: visible;
